# llm-api-switch

./: .dockerignore  .gitignore  Dockerfile  deploy.sh  docker-compose.yaml  pyproject.toml
config/: discovery_sources.yaml  model_aliases.yaml  settings.yaml
data/: seed_providers.yaml
docs/superpowers/specs/: 2026-04-05-health-check-log-page-design.md
src/: main.py
src/admin/: auth.py  routes.py
src/dashboard/: docs.html  health-log.html  index.html
src/db/: database.py  migrations.py  queries.py
src/discovery/: differ.py  scanner.py  validator.py
src/discovery/parsers/: markdown_table.py
src/gateway/: app.py  middleware.py  schemas.py
src/monitor/: auto_manager.py  health_checker.py  model_sync.py  scheduler.py  scorer.py
src/pool/: config_loader.py  key_store.py  manager.py  provider.py  quota_tracker.py
src/router/: fallback.py  router.py  strategies.py
